kubernetes/microk8s/nextjs-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-backend-service
  labels:
    app: odds_broadcast
spec:
  type: ClusterIP
  selector:
    app: odds_broadcast
    component: nextjs_frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odds_broadcast
      component: nextjs_frontend
  template:
    metadata:
      labels:
        app: odds_broadcast
        component: nextjs_frontend
    spec:
      containers:
        - name: nextjs-server
          image: localhost:32000/kwonghung/odds-broadcast/nextjs-frontend
          ports:
            - containerPort: 3000
