kubernetes/microk8s/socketio-backend.yml
#
# nginx ingress advance annotations settings reference:
# https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/advanced-configuration-with-annotations/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socketio-backend-ingress
  labels:
    app: odds_broadcast
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /my-socketio-path/
            pathType: Prefix
            backend:
              service:
                name: socketio-backend-service
                port:
                  number: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: socketio-backend-service
  labels:
    app: odds_broadcast
spec:
  type: ClusterIP
  selector:
    app: odds_broadcast
    component: socketio_backend
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socketio-backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: odds_broadcast
      component: socketio_backend
  template:
    metadata:
      labels:
        app: odds_broadcast
        component: socketio_backend
    spec:
      containers:
        - name: socketio-server
          image: localhost:32000/kwonghung/odds-broadcast/socketio-backend
          ports:
            - containerPort: 3005
